# rs80

./: Cargo.toml  README.mkdn  build.rs  isa-ops.txt
notes/: 20180712-flag-usage.mkdn  20180717-bios.mkdn
rs80-common/: Cargo.toml  README.mkdn
rs80-common/src/: insn_info.rs  isa.rs  lib.rs
rs80-gen/: Cargo.toml  README.mkdn
rs80-gen/src/: gen.rs  lib.rs  parse.rs
src/: bdos.rs  dbg.rs  dis.rs  emu.rs  emu2.rs  isa.rs  lazy.rs  lib.rs  main.rs  ops.rs
tests/: README.mkdn  binaries.rs
