[package]
name = "rs80"
version = "0.1.0"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
rs80-common = { path = "rs80-common" }

[build-dependencies]
combine = "3.3.6"
rs80-common = { path = "rs80-common" }
rs80-gen = { path = "rs80-gen" }

[profile.release]
debug = true

[workspace]
members = [
  "rs80-common",
  "rs80-gen",
]
